# aula_8_bootcamp

./: README.md  etl.py  pipeline.py  pyproject.toml
