[tool.poetry]
name = "aula-8-bootcamp"
version = "0.1.0"
description = ""
authors = ["DiegoFreitasDS <diegop.freitas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pandera = "^0.19.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
